# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2006-05-06 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* TODO: Just added a note about viewmol.

	* configure.ac (AM_GNU_GETTEXT, CATOBJEXT): Work around a bug in
	gettext.m4 leading to non-updateable translations.

	* xsl/cmd_kde.xsl (pattern.list): Fixed the wrong field name.

2006-05-03 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* HACKING: Added.

	* Makefile.am (EXTRA_DIST): Ditto.

	* TODO: Improved overview and structure.

	* src/chemical-mime-database.xml.in: Changed DTD for application
	element and adjusted the usage of this element in the whole file.

2006-05-03 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* xsl/cmd_freedesktop_org.xsl: Use the namespace attribute, not the
	xmlns attribute, for xsl:element (makes no real difference, but it is
	IMHO more common).

2006-05-03 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* TODO: Added information pointer to gdis manual.

	* src/chemical-mime-database.xml.in: Added gdis application elements.
	(chemical/x-mopac-out): Added magic pattern and "*.out" pattern.

2006-05-03 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* src/chemical-mime-database.xml.in (chemical/x-cif)
	(chemical/x-mmcif): Fixed acronym explanation for 'CIF'. Changed
	Comment.
	(chemical/x-mdl-molfile, chemical/x-mdl-rdfile, chemical/x-mdl-rxnfile)
	(chemical/x-mdl-sdfile, chemical/x-mdl-tgf): Added acronym and
	explanation for 'MDL'.

2006-05-03 Daniel Leidert <daniel.leidert.spam@gmx.net>

	* NEWS: Added items for next version 0.1.93.

	* src/chemical-mime-database.xml.in: Small DTD change to support a
	package attribute for the application element. Added support for
	chemical/x-gamess-input and chemical/x-mopac-out. Added application
	elements for xdrawchem and molden, where I missed them before, and
	initially added the application elements for gchem3d-viewer.

	* xsl/cmd_freedesktop_org.xsl: Better use the <xsl:element> element