@@ -10,6 +10,7 @@ CLEANFILES = $(kdemime_DATA)
 
 MAINTAINERCLEANFILES = Makefile.in
 
+
 vpath cmd_%.xsl $(top_srcdir)/xsl
 vpath chemical-mime-database.xml $(top_builddir)/src
 
@@ -20,6 +21,6 @@ kdemime_DATA = *.desktop
 endif #BOOL_KDE_MIME
 
 
-*.desktop : cmd_kde.xsl chemical-mime-database.xml
-	$(XSLTPROC) $^
+*.desktop : cmd_kde.xsl chemical-mime-database.xml cmd_common.xsl
+	$(XSLTPROC) $(XSLTPROC_FLAGS) $(filter-out $(top_srcdir)/xsl/cmd_common.xsl,$^)
 
